optimize the pom.xml